--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/png">
     <title>Crowdfunding Product Page</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
